--- a/graphics transformation/openglTest/openglTest.vcxproj
+++ b/graphics transformation/openglTest/openglTest.vcxproj
@@ -128,6 +128,8 @@
     <ClInclude Include="..\Dependencies\glew\glew.h" />
     <ClInclude Include="..\Dependencies\glew\glxew.h" />
     <ClInclude Include="..\Dependencies\glew\wglew.h" />
+    <ClInclude Include="config.h" />
+    <ClInclude Include="geometric_transform.h" />
     <ClInclude Include="ordered_edge_table_algorithm.h" />
   </ItemGroup>
   <ItemGroup>
