--- a/graphics transformation/openglTest/openglTest.vcxproj.filters
+++ b/graphics transformation/openglTest/openglTest.vcxproj.filters
@@ -44,6 +44,12 @@
     <ClInclude Include="ordered_edge_table_algorithm.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="geometric_transform.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="config.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Library Include="..\Dependencies\glew\glew32.lib" />
