--- a/graphics transformation/openglTest/openglTest.vcxproj.filters
+++ b/graphics transformation/openglTest/openglTest.vcxproj.filters
@@ -50,6 +50,9 @@
     <ClInclude Include="config.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="L_system.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Library Include="..\Dependencies\glew\glew32.lib" />
